; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/tlg2300/extr_pd-video.c_vidioc_querybuf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/tlg2300/extr_pd-video.c_vidioc_querybuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.front_face* }
%struct.front_face = type { i32 }
%struct.v4l2_buffer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_buffer*)* @vidioc_querybuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_querybuf(%struct.file* %0, i8* %1, %struct.v4l2_buffer* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_buffer*, align 8
  %7 = alloca %struct.front_face*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_buffer* %2, %struct.v4l2_buffer** %6, align 8
  %8 = load %struct.file*, %struct.file** %4, align 8
  %9 = getelementptr inbounds %struct.file, %struct.file* %8, i32 0, i32 0
  %10 = load %struct.front_face*, %struct.front_face** %9, align 8
  store %struct.front_face* %10, %struct.front_face** %7, align 8
  %11 = load %struct.front_face*, %struct.front_face** %7, align 8
  %12 = call i32 @logs(%struct.front_face* %11)
  %13 = load %struct.front_face*, %struct.front_face** %7, align 8
  %14 = getelementptr inbounds %struct.front_face, %struct.front_face* %13, i32 0, i32 0
  %15 = load %struct.v4l2_buffer*, %struct.v4l2_buffer** %6, align 8
  %16 = call i32 @videobuf_querybuf(i32* %14, %struct.v4l2_buffer* %15)
  ret i32 %16
}

declare dso_local i32 @logs(%struct.front_face*) #1

declare dso_local i32 @videobuf_querybuf(i32*, %struct.v4l2_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
